# HA-NLP-PROXY

./: README.md
Docs/: HA-NLP-Proxy-Documentation.md  HA-NLP-RFD.md
ha-nlp-proxy/: .coverage  .gitignore  Dockerfile  README.md  cli.py  db.py  debug_dedup.py  debug_nlp.py  dump_ha.py  evaluate_cos.py  evaluate_kuchnia.py  evaluate_nlp.py  get_ha_schema.py  ha_sync.py  main.py  nlp.py  print_kitchen_light.py  print_kuchnia_phrases.py  pyproject.toml  query_ha_intents.py  seed.yaml  seed_intents.py  test_cosine.py  test_db.py  test_inference.py  test_intent.py  test_knn.py  test_sigmoid.py  test_svc.py  test_temp.py  train.py
ha-nlp-proxy/routers/: admin.py
ha-nlp-proxy/static/: style.css
ha-nlp-proxy/templates/: base.html  config.html  dashboard.html  tester.html  training_entities.html  training_intents.html  training_rules.html
ha-nlp-proxy/templates/partials/: intent_list.html  tester_result.html
ha-nlp-proxy/tests/: conftest.py  test_admin.py  test_db.py  test_main.py  test_nlp.py
