[project]
name = "ha-nlp-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sqlmodel>=0.0.38",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
